Fixed issue with tab formatting, shadow in buttons, feed spacing and few other UI changes.

--- a/app/stylesheets/partials/_layout.sass
+++ b/app/stylesheets/partials/_layout.sass
@@ -127,24 +127,24 @@ body
 	li
 		:list-style none
 		:float left
-		position: relative
+		:position relative
 		+rounded-side(top,5px)
 		:background-color #ddd
 		:border 1px solid #ccc
 		:border-bottom none
-		:padding 10px 10px 8px 10px
-		:margin 0 5px 0 0
+		:padding 10px 10px 9px 10px
+		:margin 0 5px -1px 0
 		:line-height 1.4em
 		img
 			:float left
 			:margin-right 4px
-			:max-height 24px
+			:max-height 23px
 		// a
 			// :line-height 1.4em
 	.selected
 		:background-color #fff
-		:margin-bottom -1px
-		:padding 10px 10px 9px
+		// :margin-bottom -1px
+		:padding 10px 10px 10px
 		// :border 1px solid #333
 	.home
 		:padding 10px 10px 9px
@@ -294,7 +294,7 @@ body
 			:margin-bottom 0
 	.divider
 		:width 99%
-		:margin 25px 0 20px
+		:margin 22px 0 20px
 		:border-top 1px solid #ddd
 	.new_comment 
 		input[type="text"]
